docs/envoy/v1.10.0/_sources/api-v2/config/transport_socket/tap/v2alpha/tap.proto.rst.txt
.. _envoy_api_file_envoy/config/transport_socket/tap/v2alpha/tap.proto:

Tap
===


.. _envoy_api_msg_config.transport_socket.tap.v2alpha.Tap:

config.transport_socket.tap.v2alpha.Tap
---------------------------------------

`[config.transport_socket.tap.v2alpha.Tap proto] <https://github.com/envoyproxy/envoy/blob/v1.10.0/api/envoy/config/transport_socket/tap/v2alpha/tap.proto#L18>`_

Configuration for tap transport socket. This wraps another transport socket, providing the
ability to interpose and record in plain text any traffic that is surfaced to Envoy.

.. code-block:: json

  {
    "common_config": "{...}",
    "transport_socket": "{...}"
  }

.. _envoy_api_field_config.transport_socket.tap.v2alpha.Tap.common_config:

common_config
  (:ref:`config.common.tap.v2alpha.CommonExtensionConfig <envoy_api_msg_config.common.tap.v2alpha.CommonExtensionConfig>`, *REQUIRED*) Common configuration for the tap transport socket.
  
  
.. _envoy_api_field_config.transport_socket.tap.v2alpha.Tap.transport_socket:

transport_socket
  (:ref:`core.TransportSocket <envoy_api_msg_core.TransportSocket>`, *REQUIRED*) The underlying transport socket being wrapped.
  
  

