docs/envoy/v1.13.0/_sources/api-v2/config/transport_socket/tap/v2alpha/tap.proto.rst.txt
.. _envoy_api_file_envoy/config/transport_socket/tap/v2alpha/tap.proto:

Tap
===

.. _extension_envoy.transport_sockets.tap:


This extension may be referenced by the qualified name *envoy.transport_sockets.tap*

.. note::
  This extension is functional but has not had substantial production burn time, use only with this caveat.

  This extension is not hardened and should only be used in deployments where both the downstream and upstream are trusted.


.. _envoy_api_msg_config.transport_socket.tap.v2alpha.Tap:

config.transport_socket.tap.v2alpha.Tap
---------------------------------------

`[config.transport_socket.tap.v2alpha.Tap proto] <https://github.com/envoyproxy/envoy/blob/v1.13.0/api/envoy/config/transport_socket/tap/v2alpha/tap.proto#L21>`_

Configuration for tap transport socket. This wraps another transport socket, providing the
ability to interpose and record in plain text any traffic that is surfaced to Envoy.

.. code-block:: json

  {
    "common_config": "{...}",
    "transport_socket": "{...}"
  }

.. _envoy_api_field_config.transport_socket.tap.v2alpha.Tap.common_config:

common_config
  (:ref:`config.common.tap.v2alpha.CommonExtensionConfig <envoy_api_msg_config.common.tap.v2alpha.CommonExtensionConfig>`, *REQUIRED*) Common configuration for the tap transport socket.
  
  
.. _envoy_api_field_config.transport_socket.tap.v2alpha.Tap.transport_socket:

transport_socket
  (:ref:`core.TransportSocket <envoy_api_msg_core.TransportSocket>`, *REQUIRED*) The underlying transport socket being wrapped.
  
  

